# solana_token_info

./: Cargo.toml  README.md
src/: cli.rs  endpoint.rs  logger.rs  main.rs  request.rs
src/request/: metadata.rs  resolver.rs  supply.rs  tokenlist.rs
