[package]
name = "solana_token_info"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
borsh = "1.5.1"
clap = { version = "4.5.20", features = ["derive"] }
colog = "1.3.0"
log = "0.4.22"
tokio = "1.41.0"
mpl-token-metadata = "4.1.2"
serde = "1.0.213"
serde_json = "1.0.132"
reqwest = "0.11.27"
solana-client = "1.18.26"
solana-program = "1.18.26"
domain = { version = "0.10.3", features = ["resolv"] }
url = "2.5.2"
spl-token-metadata-interface = "0.3.0"
solana-account-decoder = "1.18.21"


